--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Edinho"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Scrapy = "^2.4.1"
+pandas = "^1.2.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
